Move HTTP things from CHBTCClient to separated class HttpClient.